[package]
name = "comptime-builder-macros"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = { version = "2.0.27", features = ["extra-traits", "full"] }

[lib]
proc-macro = true
